# nemo-backend

./: .env.example  .flake8  .gitattributes  .gitignore  .python-version  Discovery.md  DockerFile  Dockerfile  Makefile  README.md  Spacefile  add_library.sh  cdk.json  cdk_app.py  deploy_prod.sh  docker-compose.yml  format.sh  main.py  mypy.ini  package_lambda.py  pyproject.toml  requirements-dev.txt  requirements.txt  sqlite_db_prod.db  test.py
.github/workflows/: main.yml
app/: main.py
app/api/config/: database.py  database_sqlite.py  detabase.py  settings.py
app/api/core/: audio_stream.py  get_stream.py  nemo_sound.py  nemo_stream.py
app/api/crud/: data.ipynb  habits.json  nemo.py  nemodeta.py  results.json
app/api/data/: streams.json
app/api/emails/: send_email.py
app/api/emails/templates/: welcome-email.html
app/api/models/: model.py  nemo.py
app/api/pydantic/: livepeer.py  nemo.py
app/api/routers/: constants.py  livepeer.py  nemo.py  nemo_DEPRECATED.py  nemo_deta.py  spotify.py
app/api/scripts/: noisli.py
app/api/utils/: nemo.py
app/nemo/core/: get_stream.py
app/nemo/crud/: nemo.py
app/nemo/emails/templates/: welcome-email.html
app/nemo/models/: model.py  nemo.py
app/nemo/routers/: constants.py  nemo.py  spotify.py
app/nemo/scripts/: noisli.py
app/nemo/utils/: nemo.py
app/scripts/: nemo.py  nemo_streams.py  noisli.py
benchmark/: molotov-benchmark.py
dev/postgres/: docker-compose.yml
infrastructure/: infrastructure_stack.py
nemo/: __init__.py
nemo-cron/: cron-job-org.py  main.py
nemo/config/: database.py  settings.py
nemo/core/: get_stream.py
nemo/crud/: nemo.py
nemo/data/: streams.json
nemo/emails/: send_email.py
nemo/models/: model.py  nemo.py
nemo/pydantic/: nemo.py
nemo/routers/: constants.py  nemo.py  spotify.py
nemo/scripts/: noisli.py
nemo/utils/: nemo.py
nemo_cron/: cron-job-org.py  main.py
noiist/: __init__.py
noiist/config/: database.py  settings.py
noiist/crud/: noisli.py
noiist/emails/: send_email.py
noiist/emails/templates/: welcome.html
noiist/models/: model.py  noisli.py
noiist/pydantic/: noisli.py
noiist/routers/: constants.py  noisli.py  spotify.py
noiist/scripts/: noisli.py
noiist/utils/: noisli.py  noisliy.py
scripts/: populate-db.py
tests/: test_api.py  test_deta.py  test_noiist.py  test_noisli.py
