[tool.poetry]
name = "nemo"
version = "0.1.0"
description = "Backend powering Nemo - Your digital place to focus."
authors = ["Harshit Singhai <harshitsinghai77@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
databases = {extras = ["postgresql"], version = "^0.4.3"}
requests = "^2.25.1"
google-auth = "^1.32.0"
PyJWT = "^2.1.0"
Jinja2 = "^3.0.1"
python-dotenv = "^0.19.0"
psycopg2 = "^2.9.1"
gunicorn = "^20.1.0"
pafy = "^0.5.5"
youtube_dl = "^2021.6.6"
uvloop = "^0.16.0"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b2"
isort = "^5.8.0"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
molotov = "^2.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
