[tool.poetry]
name = "nemo"
version = "0.1.0"
description = "Nemo - Your digital place to focus."
authors = ["Harshit Singhai <harshitsinghai77@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
requests = "^2.25.1"
PyJWT = "^2.1.0"
Jinja2 = "^3.0.1"
python-dotenv = "^0.19.0"
uvloop = "^0.16.0"
google-auth = "^2.3.3"
SQLAlchemy = "^1.4.27"
asyncpg = "^0.25.0"
httpx = "^0.21.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.8.0"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
molotov = "^2.1"
black = "^22.3.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
